# sudokun

./: .gitignore  LICENSE  README.md  sudoku  sudokun.py
cpp/: CMakeLists.txt  README.md
cpp/src/: main.cpp  sudoku.cpp  sudoku.hpp  utils.cpp  utils.hpp
cpp/tst/: sudoku-test.cpp
python/: README.md
python/src/: sudokun.py
python/tst/: sudokun.py
